Fixed the gap between products

--- a/styles/apps/csodaasvanyok/pages/product-list-page.scss
+++ b/styles/apps/csodaasvanyok/pages/product-list-page.scss
@@ -79,7 +79,11 @@
     flex-basis: calc(50% - 10px);
 
     margin-bottom: 10px; /* Gap between rows */
-    margin-right: 10px; /* Gap between columns */
+    margin-right: 20px; /* Gap between columns */
+
+    &:nth-child(2n) {
+      margin-right: 0; /* Remove margin-right for every 2nd item */
+    }
 
     .zoom {
       overflow: hidden;
@@ -127,15 +131,27 @@
   }
 }
 
-@media (min-width: 480px) {
-  .products-page-container .products-container {
-    width: calc(33% - 10px);
-  }
-}
+// @media (min-width: 480px) {
+//   .products-page-container .products-container {
+//     width: calc(33% - 10px);
+//   }
+// }
 
 @media (min-width: 768px) {
   .products-page-container .products-container {
     flex-basis: calc(33.3333% - 10px);
+
+    &:nth-child(1n) {
+      margin-right: 15px; /* Remove margin-right for every 3rd item */
+    }
+
+    &:nth-child(2n) {
+      margin-right: 15px; /* Remove margin-right for every 3rd item */
+    }
+
+    &:nth-child(3n) {
+      margin-right: 0; /* Remove margin-right for every 3rd item */
+    }
   }
 }
 
@@ -163,8 +179,6 @@
     }
 
     .products-container {
-      flex-basis: calc(25% - 10px);
-
       li {
         padding: 12px;
       }
@@ -174,6 +188,21 @@
 
 @media (min-width: 1200px) {
   .products-page-container .products-container {
-    width: calc(25% - 10px);
+    flex-basis: calc(25% - 10px);
+    &:nth-child(1n) {
+      margin-right: 13px; /* Remove margin-right for every 3rd item */
+    }
+
+    &:nth-child(2n) {
+      margin-right: 13px; /* Remove margin-right for every 3rd item */
+    }
+
+    &:nth-child(3n) {
+      margin-right: 13px; /* Remove margin-right for every 3rd item */
+    }
+
+    &:nth-child(4n) {
+      margin-right: 0; /* Remove margin-right for every 3rd item */
+    }
   }
 }
